# daily-arxiv-feed

./: .gitignore  README.md  com.pranavpg.daily-arxiv.plist  install.sh  pyproject.toml  run.sh
daily_arxiv_feed/: __init__.py  compile.py  fetch.py  filter.py  llm.py  main.py  overview.py  summarize.py  verify.py
docs/superpowers/plans/: 2026-04-24-daily-arxiv-feed.md
docs/superpowers/specs/: 2026-04-24-daily-arxiv-feed-design.md
output/: 2026-05-05.tex  2026-05-06.tex  2026-05-07.tex  2026-05-09.tex  2026-05-11.tex  2026-05-12.tex  2026-05-13.tex  2026-05-14.tex  2026-05-16.tex  2026-05-17.tex  2026-05-19.tex  2026-05-20.tex  2026-05-21.tex  2026-05-22.tex  2026-05-23.tex  2026-05-24.tex  2026-05-25.tex  2026-05-26.tex  2026-05-28.tex  2026-05-29.tex  2026-05-30.tex  2026-05-31.tex  2026-06-06.tex  2026-06-07.tex  2026-06-08.tex  2026-06-09.tex  2026-06-12.tex  2026-06-13.tex  2026-06-20.tex  2026-06-21.tex  2026-06-22.tex  2026-06-23.tex  2026-06-25.tex  2026-06-26.tex  2026-06-27.tex  2026-06-28.tex  2026-06-29.tex  2026-06-30.tex  2026-07-01.tex  2026-07-09.tex  (+5 more)
templates/: neurips_digest.tex
tests/: test_compile.py  test_fetch.py  test_filter.py  test_llm.py  test_main.py  test_overview.py  test_summarize.py  test_verify.py
