[tool.poetry]
name = "daily-arxiv-feed"
version = "0.1.0"
description = "Daily arxiv paper digest — filtered and summarized by LLM"
authors = ["Pranav Gupta"]
packages = [{include = "daily_arxiv_feed"}]

[tool.poetry.dependencies]
python = "^3.12"
openai = "^2.30"
httpx = "^0.27"
feedparser = "^6.0"
defusedxml = "^0.7"
jinja2 = "^3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
